add C&O | some style

--- a/site/templates/topics.html
+++ b/site/templates/topics.html
@@ -5,12 +5,12 @@ Topics
 {% endblock %} 
 
 {% block body %}
-<h1>Howdey, welcome to the topics page</h1>
+<h1>Howdy, welcome to the topics page</h1>
 
-<h2>Check out some of these topics:</h2>
+<h2>Check this stuff out:</h2>
 <ul>
     <li>
-        <a href="{{ url_for("oop") }}">Object-Oriented Programming</a>
+        <a class="links" href="{{ url_for("oop") }}">Object-Oriented Programming</a>
     </li>
 </ul>
 {% endblock %}
