--- a/site/static/style.css
+++ b/site/static/style.css
@@ -6,16 +6,15 @@ nav {
 
 nav a {
     color: rgb(8, 255, 226);
-    padding: 14px 16px;
+    padding: 10px 10px;
 
 }
 
 nav a:hover {
-    background-color: rgb(214, 255, 6);
-    color: black;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 254, 254);
     border-radius: 10px;
-    padding: 10px 12px;
-    
+    padding: 5px 5px;
 }
 
 .navbar {
@@ -23,10 +22,19 @@ nav a:hover {
 
 }
 
-/* -------BODY------- */
+
+
+
+
+/* -------BODY BASE------- */
 html {
-    background-color: #b1b1b1;
+    background-color: #676464;
 }
+
+
+
+
+
 
 /* -------BODY------- */
 h1 {
@@ -41,4 +49,61 @@ h2 {
     justify-content: center;
     align-items: center;
     margin-top: 100px;
+}
+
+.container {
+    border: 3px solid bisque;
+    border-radius: 10px;
+    padding: 10px;
+    max-width: 850px;
+    margin: auto;
+}
+
+
+
+
+/* -------PARAGRAPH------- */
+p {
+    color: rgb(228, 225, 225);
+    max-width: 800px;
+    margin: auto;
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.margin-top {
+    margin-top: 50px;
+}
+
+.highlight {
+    color: orange;
+}
+            /* will need to wrap like so: <span class="highlight">theWord</span> */
+
+.code-box {
+    background-color: rgb(65, 64, 64);
+    padding: 10px;
+    border-radius: 3px;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    overflow: auto;
+    max-width: 600px;
+    display: block;
+    margin: auto;
+}
+
+.code-box code {
+    color: bisque;
+}
+
+.links {
+    color: rgb(8, 255, 226);
+}
+
+.links:hover {
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 254, 254);
+    border-radius: 10px;
+    padding: 8px 10px;
 }
