--- a/site/templates/base.html
+++ b/site/templates/base.html
@@ -6,13 +6,17 @@
 		<title>{% block title %}{% endblock %}</title>
 		<link rel="stylesheet" href="{{ url_for("static", filename="style.css") }}">
 	</head>
-	<body>
-		<div class="navbar">
-			<nav>
-				<a href="{{ url_for('home') }}">Home</a>
-				<a href="{{ url_for('topics') }}">Topics</a>
-			</nav>
+	<body> 
+			<div class="navbar">
+				<nav>
+					<a href="{{ url_for('home') }}">Home</a>
+					<a href="{{ url_for('topics') }}">Topics</a>
+				</nav>
+			</div>
+		<div class="container">
+			<div class="container">
+				{% block body %} {% endblock %}
+			</div>
 		</div>
-		{% block body %} {% endblock %}
 	</body>
 </html>
