--- a/site/templates/home.html
+++ b/site/templates/home.html
@@ -9,9 +9,9 @@ Home
 {% endblock %} 
 
 {% block body %}
-    <h1>Welcome to the home page homie!</h1>
+<h1>Welcome to the home page homie!</h1>
+<h3>Website for Learning</h3>
+<h3>Objective:</h3>
 
-    <h1>Welcome to the home page homie!</h1>
-
-    <h1>Welcome to the home page homie!</h1>
+<p>This is going to be a website for learning coding and certain computer science topics mainly just for myself. The idea is to learn and build while I learn- but also try to understand topics in a way that would also allow me to teach others these ideas. I have no intention for this to be a course for others, and surely there will be a lot of mistakes. But my hope is that this approach will help me learn better, and also apply what I learn at the same time. This is just for me. But if you happen to find this- feel free to pick it apart.</p>
 {% endblock %}
