--- a/site/templates/classes-and-objects.html
+++ b/site/templates/classes-and-objects.html
@@ -29,7 +29,7 @@ my_car = Car("Toyota", "Supra", 2021)
 <p>In this example, [ my_car ] is an object of the [ Car ] class, with brand "Toyota", model "Corolla", and year 2021. You can call the methods of the class on this object like this:</p>
 <pre class="code-box">
     <code>
-my_car.start_engine()	# prints "Engine started"
+my_car.start_engine()	<span class="comment"># prints "Engine started"</span>
     </code>
 </pre>
 <p>Each object has its own values for the variables defined in the class, and can use the methods defined in the class. You can create as many objects of a class as you need, and they are all independent of each other. If you change a variable in one object, it does not affect other objects.</p>
