--- a/site/templates/topics.html
+++ b/site/templates/topics.html
@@ -12,5 +12,11 @@ Topics
     <li>
         <a class="links" href="{{ url_for("oop") }}">Object-Oriented Programming</a>
     </li>
+    <li>
+        <a class="links" href="{{ url_for("oop") }}">Algorithms</a>
+    </li>
+    <li>
+        <a class="links" href="{{ url_for("oop") }}">Data Structures</a>
+    </li>
 </ul>
 {% endblock %}
