--- a/site/static/style.css
+++ b/site/static/style.css
@@ -5,7 +5,7 @@ nav {
 }
 
 nav a {
-    color: rgb(8, 255, 226);
+    color: rgb(255, 255, 255);
     padding: 10px 10px;
 
 }
@@ -28,7 +28,7 @@ nav a:hover {
 
 /* -------BODY BASE------- */
 html {
-    background-color: #676464;
+    background-color: #74a394aa;
 }
 
 
@@ -52,7 +52,7 @@ h2 {
 }
 
 .container {
-    border: 3px solid bisque;
+    border: 3px solid rgb(72, 65, 57);
     border-radius: 10px;
     padding: 10px;
     max-width: 850px;
@@ -64,7 +64,7 @@ h2 {
 
 /* -------PARAGRAPH------- */
 p {
-    color: rgb(228, 225, 225);
+    color: rgb(31, 32, 47);
     max-width: 800px;
     margin: auto;
     display: block;
@@ -83,10 +83,9 @@ p {
 
 .code-box {
     background-color: rgb(65, 64, 64);
-    padding: 10px;
-    border-radius: 3px;
-    white-space: pre-wrap;
-    word-wrap: break-word;
+    padding: 7px;
+    border-radius: 5px;
+    text-wrap: nowrap;
     overflow: auto;
     max-width: 600px;
     display: block;
@@ -94,11 +93,11 @@ p {
 }
 
 .code-box code {
-    color: bisque;
+    color: rgb(228, 140, 8);
 }
 
 .links {
-    color: rgb(8, 255, 226);
+    color: rgb(255, 255, 255);
 }
 
 .links:hover {
@@ -106,4 +105,8 @@ p {
     color: rgb(255, 254, 254);
     border-radius: 10px;
     padding: 8px 10px;
+}
+
+.comment {
+    color: white;
 }
