--- a/site/templates/inheritance.html
+++ b/site/templates/inheritance.html
@@ -6,4 +6,123 @@ Inheritance
 
 {% block body %}
 <h1>Inheritance</h1>
+<p class="margin-top">Inheritance is a fundamental principle of OOP that allows one class to inherit properties and methods from another class. It promotes the concept of reusability and is a way to create a new class using properties of an existing class without modifying it.</p>
+<p>Key Concepts:</p>
+<p>Base Class (Parent Class): The class whose properties and methods are inherited is known as the base case or parent class.</p>
+<p>Derived Class (Child Class): The class that inherits properties from another class is known as the derived class or child class.</p>
+<p>Inheritance Types: There are several types of inheritance, including single, multiple, multilevel, hierarchical, and hybrid inheritance. The type of inheritance implemented depends on the programming language used.</p>
+<p>Method Overriding: In the derived classes, you can modify the behavior of methods inherited from the base class. This is known as method overriding.</p>
+<p>Access Modifiers: These define the accessibility of the properties and methods of a class. Common access modifiers include public, private, and protected.</p>
+<p class="margin-top">Example of inheritance in Python:</p>
+<pre class="code-box">
+    <code>
+class Animal:	        <span class="comment"># base class</span>
+    def __init__(self, name):
+        self.name = name
+    
+    def speak(self):
+        pass	        <span class="comment"># to be defined by subclass</span>
+    
+class Dog(Animal):	<span class="comment"># derived class</span>
+    def speak(self):
+        return "woof!"
+    
+class Cat(Animal):	<span class="comment"># derived class</span>
+    def speak(self):
+        return "Meow!"
+    </code>
+</pre>
+<p>In this example, [ Dog ] and [ Cat ] classes inherit from the Animal class. Both [ Dog ] and [ Cat ] override the [ speak ] method of Animal. Now, if you create instance of [ Dog ] and [ Cat ] you can call the [ Speak ] method on them:</p>
+<pre class="code-box">
+    <code>
+fido = Dog("Fido")
+print(fido.speak())		<span class="comment"># prints "Woof!"</span>
+
+whiskers = Cat("Whiskers")
+print(whiskers.speak())		<span class="comment"># prints "Meow!"</span>
+    </code>
+</pre>
+<p>Inheritance allows for more organized and manageable code, making it easier to create and maintain applications. The derived classes have their own methods and can also use the methods of the base class, reducing code duplication.</p>
+<p class="margin-top">Three more Examples:</p>
+<p class="margin-top">Using the [ super() ] function:</p>
+<pre class="code-box">
+    <code>
+class Mammal:
+    def __init__(self, mammalName):
+        print(mammalName, " is a warm-blooded animal.")
+
+class Dog(Mammal):
+    def __init__(self):
+        print("Dog has four legs.")
+        super().__init__("Dog")
+
+d1 = Dog()
+    </code>
+</pre>
+<p>The output would be:</p>
+<pre class="code-box">
+    <code>
+"Dog has four legs."
+"Dog is a warm-blooded animal."
+    </code>
+</pre>
+<p>Breakdown: When [ d1 = Dog() ] is executed, it called the [ __init__ ] method in the dog class. The [ Dog ] classes [ __init__ ] method first prints "Dog has four legs." Then, [ super().__init__("Dog") ] is called. This calls the [ __init__ ]method of the Mammal class (the parent class), passing "Dog" as an argument. The mammal classes [ __init__ ] method prints "Dog is a warm-blooded animal."</p>
+<p class="margin-top">Multiple Inheritance:</p>
+<p>Python supports multiple inheritance, where a class can be derived from more than one base classes.</p>
+<pre class="code-box">
+    <code>
+class Animal:
+    def eats(self):
+        return "Eats food"
+
+class Bird:
+    def flies(self):
+        return "Flies in the sky"
+
+class Sparrow(Animal, Bird):
+    pass
+
+s = Sparrow()
+print(s.eats())		<span class="comment"># prints "Eats food"</span>
+print(s.files())	<span class="comment"># prints "Flies in the sky"</span>
+    </code>
+</pre>
+<p>In this example, [ Sparrow ] is derived from both [ Animal ] and [ Bird ] classes, and inherits methods from both.</p>
+<p class="margin-top">Method Overriding:</p>
+<p>In Python, method overriding occurs by simply defining in the child class a method with the same name of a method in the parent class.</p>
+<pre class="code-box">
+    <code>
+class Bird:
+    def intro(self):
+        print("There are many types of birds.")
+
+    def flight(self):
+        print("Most of the birds can fly but some cannot.")
+
+class sparrow(Bird):
+    def flight(self):
+        print("Sparrows can fly.")
+
+class ostrich(Bird):
+    def flight(self):
+        print("Ostriches cannot fly.")
+
+b1 = Bird()		
+b2 = sparrow()	
+b3 = ostrich()	
+
+b1.intro()	<span class="comment"># prints "There are many types of birds."</span>
+b1.flight()	<span class="comment"># prints "Most of the birds can fly but some cannot."</span>
+
+b2.intro()	<span class="comment"># prints "There are many types of birds."</span>
+b2.flight()	<span class="comment"># prints "Sparrows can fly."</span>
+
+b3.intro()	<span class="comment"># prints "There are many types of birds."</span>
+b3.flight()	<span class="comment"># prints "Ostriches cannot fly."</span>
+    </code>
+</pre>
+<p>In this example, sparrow and ostrich classes override the flight method of the bird class</p>
+<p>When [ b1.intro() ] and [ b1.flight() ] are called, it prints "There are many types of birds." and "Most of the birds can fly but come cannot." because [ b1 ] is an instance of the [ Bird ] class.</p>
+<p>When [ b2.intro ] and [ b1.flight ] are called, it prints "There are many types of birds." and "Sparrows can fly." because b2 is an instance of the sparrow class. The [ intro() ] method is inherited from the [ Bird ] class and the [ flight() ] method is overridden in the [ sparrow ] class.</p>
+<p>When [ b3.into() ] and [ b3.flight() ] are called, it prints "There are many types of birds." and "Ostriches cannot fly." because [ b3 ] is an instance of the [ ostrich ] class. The [ intro() ] method is inherited from the [ Bird ] class and the [ flight() ] method is overridden in the [ ostrich ] class.</p>
 {% endblock %}
