--- a/site/templates/abstraction.html
+++ b/site/templates/abstraction.html
@@ -5,7 +5,7 @@ Abstraction
 {% endblock %} 
 
 {% block body %}
-<h1>Abstraction</h1>
+<h1 class="topic-title">Abstraction</h1>
 <p class="margin-top">Abstraction is the process of hiding the complex details of an operation while providing a simpler interface.</p>
 <p>Data Abstraction: Data abstraction is about providing only essential information to the outside world while hiding their background details, i.e., how the data is stored and operations are performed. In other words, the user interacts with only the information that is necessary, while the underlying complexities and hidden from the user.</p>
 <p>Method Abstraction: This is achieved by creating methods that perform complex operations, but providing a simple interface for them. The user doesn't need to know how the method does what it does- they just need to know what it does.</p>
