--- a/site/templates/aggregation.html
+++ b/site/templates/aggregation.html
@@ -5,7 +5,7 @@ Aggregation
 {% endblock %} 
 
 {% block body %}
-<h1>Aggregation</h1>
+<h1 class="topic-title">Aggregation</h1>
 <p class="margin-top">Aggregation is a special form of association in OOP. It represents a "has-as"" relationship between two classes, where one class is a complex entity that consists of one or more other classes, but there is still independence of the classes.</p>
 <p>Key Points:</p>
 <p>Definition: Aggregation is a relationship where one class (the "whole" or "parent") has a reference to another class (the "part" or "child"), but the child can exist independently of the parent. For example, a Car might have an Engine. The car is the whole entity that uses the engine, but the engine could exist without the car.</p>
