--- a/site/templates/association.html
+++ b/site/templates/association.html
@@ -5,7 +5,7 @@ Association
 {% endblock %} 
 
 {% block body %}
-<h1>Association</h1>
+<h1 class="topic-title">Association</h1>
 <p class="margin-top">Association represents a relationship between two or more objects</p>
 <p>Some key points:</p>
 <p>Definition: Association is a "using" relationship between two or more objects. It's a way for one objects to interact with another, without necessarily having a strong dependency. For example, a [ Driver ] object might have an association with a [ car ] object, because the driver uses the car</p>
