--- a/site/templates/composition.html
+++ b/site/templates/composition.html
@@ -5,7 +5,7 @@ Composition
 {% endblock %} 
 
 {% block body %}
-<h1>Composition</h1>
+<h1 class="topic-title">Composition</h1>
 <p class="margin-top">Composition is a design principle in OOP where a class (the "composite" or "parent") is made up of other classes (the "components" or "children"). It represents a "part-of" relationship and is a strong form of aggregation.</p>
 <p>Key points:</p>
 <p>Definition: Composition is a relationship where one class (The composite) contains an instance of  another class (the component). The component is part of the composite. For example, a Car might have an Engine. The car is the whole entity, and the engine is part of the car.</p>
