--- a/site/templates/encapsulation.html
+++ b/site/templates/encapsulation.html
@@ -5,7 +5,7 @@ Encapsulation
 {% endblock %} 
 
 {% block body %}
-<h1>Encapsulation</h1>
+<h1 class="topic-title">Encapsulation</h1>
 <p class="margin-top">Encapsulation is one the fundamental concepts in OOP. It describes the idea of wrapping data and the methods that work on data within one unit. This puts restrictions on accessing variables and methods directly and can prevent the accidental modification of data.</p>
 <p class="margin-top">Breaking it down:</p>
 <p>Data Hiding: The implementation of the class is hidden from other classes, and can only be accessed through the methods of their current class. This is also known as data hiding.</p>
