--- a/site/templates/inheritance.html
+++ b/site/templates/inheritance.html
@@ -5,7 +5,7 @@ Inheritance
 {% endblock %} 
 
 {% block body %}
-<h1>Inheritance</h1>
+<h1 class="topic-title">Inheritance</h1>
 <p class="margin-top">Inheritance is a fundamental principle of OOP that allows one class to inherit properties and methods from another class. It promotes the concept of reusability and is a way to create a new class using properties of an existing class without modifying it.</p>
 <p>Key Concepts:</p>
 <p>Base Class (Parent Class): The class whose properties and methods are inherited is known as the base case or parent class.</p>
