--- a/site/templates/polymorphism.html
+++ b/site/templates/polymorphism.html
@@ -5,7 +5,7 @@ Polymorphism
 {% endblock %} 
 
 {% block body %}
-<h1>Polymorphism</h1>
+<h1 class="topic-title">Polymorphism</h1>
 <p class="margin-top">The word "Polymorphism" comes from Greek and means "many shapes". In programming, it refers to the ability of an object to take on many forms. The most common use of polymorphism in OOP occurs when a parent class reference is used to refer to a child class object.</p>
 <p class="margin-top">Breakdown:</p>
 <p>Subtyping: Subtyping, also known as subtype polymorphism, is a form of polymorphism in which a subclass is datatype that is a subtype of a superclass. The superclass can be used to refer to the subclass object. In other words, a reference variable of a superclass can point to an object of the subclass.</p>
