--- a/site/templates/base.html
+++ b/site/templates/base.html
@@ -8,15 +8,18 @@
 	</head>
 	<body> 
 			<div class="navbar">
-				<nav>
-					<a href="{{ url_for('home') }}">Home</a>
-					<a href="{{ url_for('topics') }}">Topics</a>
-				</nav>
+				<div class="dropdown">
+					<button class="dropbtn" src="{{ url_for('static', filename='pictures/dropdown.png') }}" alt="Menu">
+					<div class="dropdown-content">
+						<nav>
+							<a href="{{ url_for('home') }}">Home</a>
+							<a href="{{ url_for('topics') }}">Topics</a>
+						</nav>
+					</div>
+				</div>
 			</div>
-		<div class="container">
 			<div class="container">
 				{% block body %} {% endblock %}
 			</div>
-		</div>
 	</body>
 </html>
