--- a/site/templates/classes-and-objects.html
+++ b/site/templates/classes-and-objects.html
@@ -5,8 +5,10 @@ Classes & Objects
 {% endblock %} 
 
 {% block body %}
-<h1>Classes & Objects</h1>
-<p class="margin-top">A class is a blueprint or prototype the defines the variables and the methods (functions) common to all objects of a certain kind. An example of a class in Python would be:</p>
+<h1 class="topic-title">CLASSES & OBJECTS</h1>
+<div class="para-block">
+<p class="margin-top">A class is a blueprint or prototype the defines the variables and the methods (functions) common to all objects of a certain kind.</p>
+<p>An example of a class in Python would be:</p>
 <pre class="code-box">
     <code>
 class Car:
@@ -20,7 +22,7 @@ class Car:
     </code>
 </pre>
 <p>In this example, [ Car ] is the class. It has an __init__ method that is used to initialize new objects of this class, and a [ start_engine ] method that all [ Car ] objects will have.</p>
-<p>An object is an instance of a class. You can create an object of the [ Car ] class like so:</p>
+<p class="margin-top">An object is an instance of a class. You can create an object of the [ Car ] class like so:</p>
 <pre class="code-box">
     <code>
 my_car = Car("Toyota", "Supra", 2021)
@@ -34,6 +36,8 @@ my_car.start_engine()	<span class="comment"># prints "Engine started"</span>
 </pre>
 <p>Each object has its own values for the variables defined in the class, and can use the methods defined in the class. You can create as many objects of a class as you need, and they are all independent of each other. If you change a variable in one object, it does not affect other objects.</p>
 <p>In summary, a class is like a blueprint, and an object is something you build based on that blueprint. The class defines what variables and methods an object will have, and the object is an instance of the class with actual values.</p>
+</div>
+<div class="para-block">
 <p class="margin-top">Benefits of using classes and objects in OOP:</p>
 <p>Modularity: The source code for an object can be written and maintained independently of the source code for other objects. Once created, an object can be easily passed around inside the system.</p>
 <p>Information-hiding: By interacting only with an object's methods, the details of its internal implementation remain hidden from the outside world.</p>
@@ -42,5 +46,6 @@ my_car.start_engine()	<span class="comment"># prints "Engine started"</span>
 <p>Encapsulation: A class or object can encapsulate functionality and data into one reusable package. the data (attributes) and code (methods) are tied together as a self-contained unit called an object. This encapsulation helps manage complexity by keeping the interactions between objects under control.</p>
 <p>Inheritance: Classes can inherit common properties and functionality from other classes. This allows for more efficient and consistent code by allowing classes to share, extend, and override configurations and behaviors defined in other classes.</p>
 <p>Polymorphism: Polymorphism allows a single interface to represent different types of objects at runtime. This means that different classes can define the same method or property and you can use objects of different classes interchangeably.</p>
-<p class="margin-top">These benefits make OOP a popular choice for large, complex software systems and applications where ease of maintenance, rapid development, and code reusability are important.</p>
+<p>These benefits make OOP a popular choice for large, complex software systems and applications where ease of maintenance, rapid development, and code reusability are important.</p>
+</div>
 {% endblock %}
